# QRplusplus

./: .gitignore  CMakeLists.txt
QRplusplus/: BitBuffer.cpp  BitBuffer.hpp  CMakeLists.txt  QrCode.cpp  QrCode.hpp  QrSegment.cpp  QrSegment.hpp  main.cpp  qrplusplus.cpp  qrplusplus.h  qrplusplus.qrc  qrplusplus.ui
